--- a/Lab-4/index.html
+++ b/Lab-4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JavaScript Sandbox</title>
+    <title>Form</title>
     <meta charset="UTF-8" />
     <style></style>
   </head>
