--- a/Lab-7/index.html
+++ b/Lab-7/index.html
@@ -49,7 +49,7 @@
           />
           <strong class="address__header">Address 3</strong>
           Box 564, Huston<br />
-          <em></em>
+          <em>Mexica</em>
           <a class="address__delete-btn" href="#" title="Видалити">&times;</a>
         </address>
 
